2006-01-07  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.h: 
	* src/yelp-utils.c: 
	* src/yelp-toc-pager.c: 
	* src/yelp-info-pager.c: 
	* data/info.xml.in: 
	* data/Makefile.am: 
	* src/yelp-window.c: 
	Add info pages to the table of contents
	
2006-01-07  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-marshal.list: 
	* src/yelp-html.h: 
	* src/yelp-html.cpp: 
	* src/yelp-window.c: 
	Make HTML frames work, fixes bug #157337
	
2006-01-07  Brent Smith  <gnome@nextreality.net>

	* src/info2html/data.h:
	* src/info2html/parse.c:
	* src/info2html/parse.h:
	* src/info2html/version.h:
	* src/man2html/yelp-man2html.c:
	* src/test-reader.c:
	* src/yelp-db2html.c:
	* src/yelp-html-gtkhtml1.c:
	* src/yelp-html-gtkhtml2.c:
	* src/yelp-index-model.c:
	* src/yelp-index-model.h:
	* src/yelp-info.c:
	* src/yelp-info.h:
	* src/yelp-man.c:
	* src/yelp-man.h:
	* src/yelp-pregenerate.c:
	* src/yelp-pregenerate.h:
	* src/yelp-uri.c:
	* src/yelp-uri.h:
	removed these lecagy files: fixes #304429

2006-01-07  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-01-06  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	* configure.in:
	Bump minimum beagle requirement and fix compiler error
	Bug #325049

2006-01-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-print.c: 
	Fix a small typo, bug #325286

2006-01-04  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-db-pager.c: 
	Clean up new get_title code.  
	Prefer titleAbbrev if available
	
2005-12-20  Brent Smith  <gnome@nextreality.net>

	* src/test-man-parser.c: (main):
	* src/yelp-man-parser.c: (yelp_man_parser_parse_doc):
	Fix some issues with critical warnings related to gnomevfs and
	an incorrect expression in the man parser.

2005-12-16  Brent Smith  <gnome@nextreality.net>

	* src/yelp-utils.c: (get_doc_type):
	committed patch to make yelp accept mime-types application/xml
	and application/docbook+xml, courtesy of Dave Malcom.  Fixes